--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,6 @@ dmypy.json
 # End of https://www.gitignore.io/api/python,pycharm,jupyternotebooks,visualstudiocode
 
 .idea/
+venv/
+.vscode/
+.venv/
